dist_man1_MANS=

if BUILD_WONDERCOIND
  dist_man1_MANS+=wondercoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=wondercoin-qt.1
endif

if BUILD_WONDERCOIN_CLI
  dist_man1_MANS+=wondercoin-cli.1
endif

if BUILD_WONDERCOIN_TX
  dist_man1_MANS+=wondercoin-tx.1
endif

if BUILD_WONDERCOIN_UTIL
  dist_man1_MANS+=wondercoin-util.1
endif

if ENABLE_WALLET
if BUILD_WONDERCOIN_WALLET
  dist_man1_MANS+=wondercoin-wallet.1
endif
endif
